<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">QuickContact</string>
    <string name="action_settings">Settings</string>
    
    <string name="contacts_title">Quick Contacts</string>
    <string name="search_hint">Input keyword</string>
    <string name="contacts_generate">Generate</string>
    <string name="settings">Settings</string>
    
    <string name="simple_info">Simple info</string>
    <string name="multi_info">Multi info</string>
    <string name="contacts_count">count</string>
    
    <string name="multi_numbers">Multi numbers</string>
    <string name="same_contact_repeat">Same repeat</string>
    
    <string name="ok">OK</string>
    <string name="reset">reset</string>
    
    <string name="toast_empty_counts">empty count not allowed</string>
    <string name="toast_invalid_number">invalid number</string>
    
    <string name="loading_dialog_title">generating</string>
    <string name="loading_dialog_message">please wait.......</string>
    
    <string name="message_generate_finish">finish</string>
    <string name="message_generate_cancel">cancel</string>
    
    <string name="settings_title">Settings</string>
    <string name="generate_display_name">generate display name</string>
    <string name="generate_nick_name">generate nick name</string>
    <string name="generate_phone_number">generate phone number</string>
    <string name="generate_event_number">generate event</string>
    <string name="generate_email">generate nick email</string>
    <string name="generate_postal">generate post</string>
    <string name="generate_im">generate IM</string>
    <string name="generate_org">generate organization</string>
    <string name="generate_photo">generate photo</string>
    <string name="generate_note">generate note</string>
    <string name="generate_web_site">generate web site</string>
    <string name="save_success">save success</string>
    <string name="save_settings">save settings</string>
    
    <string name="nothing_generate">nothing will be generated, please check settings</string>
    <string name="follow_settings_hint">Set the build options in settings activity</string>
    
    <string name="keyback_hint">press again to exit</string>
</resources>
