<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FEFEFE"
    android:orientation="vertical"
    tools:context="cn.appleye.quickcontact.ContactGenerateActivity" >
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="24sp"
        android:background="#EEEEEE"
        android:paddingTop="10dip"
        android:paddingBottom="10dip"
        android:text="@string/contacts_generate" />
    
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="1"
        android:orientation="vertical"
        android:gravity="center_vertical|center_horizontal">
        <RadioGroup 
            android:id="@+id/radioGroup" 
            android:layout_width="match_parent" 
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical|center_horizontal">
            <RadioButton
                android:id="@+id/simple_info_radio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dip"
                android:checked="true"
                android:text="@string/radio_simple_info" />
            <RadioButton
                android:id="@+id/full_info_radio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/radio_full_info" />
        </RadioGroup>
        <cn.appleye.quickcontact.widget.ClearEditText
            android:id="@+id/contacts_count"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:paddingTop="8dip"
            android:paddingBottom="8dip"
            android:paddingLeft="4dip"
            android:paddingRight="4dip"
            android:layout_marginLeft="4dip"
            android:layout_marginRight="4dip"
            android:inputType="numberDecimal"
            android:hint="@string/contacts_count" />
        <LinearLayout
            android:layout_width="match_parent" 
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical|center_horizontal">
            <CheckBox
                android:id="@+id/multi_contacts_checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dip"
                android:text="@string/multi_numbers"/>
            <CheckBox
                android:id="@+id/same_repeat_checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/same_contact_repeat"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent" 
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical|center_horizontal">
            <Button
                android:id="@+id/reset_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dip"
                android:text="@string/reset"/>
            <Button
                android:id="@+id/ok_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ok"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>